tests for maps routes

--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
 		"@trivago/prettier-plugin-sort-imports": "^6.0.0",
 		"@tsconfig/node18": "^18.2.6",
 		"@types/node": "^20.19.26",
+		"bogon": "^1.1.0",
 		"eslint": "^9.39.1",
+		"eventsource-client": "^1.2.0",
 		"globals": "^16.5.0",
 		"husky": "^9.1.7",
 		"lint-staged": "^16.2.7",
+		"msw": "^2.12.4",
 		"prettier": "^3.7.4",
 		"type-fest": "^5.3.1",
 		"typescript": "^5.9.3",
