--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
 		"@whatwg-node/server": "^0.10.17",
 		"itty-router": "^5.0.22",
 		"p-defer": "^4.0.1",
-		"secret-stream-http": "^1.0.0",
+		"secret-stream-http": "^1.0.1",
 		"styled-map-package": "^4.0.1",
 		"typebox": "^1.0.61",
 		"typed-event-target": "^3.4.0",
@@ -73,5 +73,8 @@
 	"files": [
 		"src/",
 		"dist/"
+	],
+	"bundleDependencies": [
+		"@whatwg-node/server"
 	]
 }
