--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@eslint/js": "^9.39.1",
 		"@trivago/prettier-plugin-sort-imports": "^6.0.0",
 		"@tsconfig/node18": "^18.2.6",
+		"@types/bogon": "^1.0.2",
 		"@types/node": "^20.19.26",
 		"@vitest/coverage-v8": "^4.0.17",
 		"bogon": "^1.1.0",
