--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
 		"typeRoots": ["./types", "./node_modules/@types"]
 	},
 	"include": ["**/*"],
-	"exclude": ["node_modules", "dist"]
+	"exclude": ["node_modules", "dist", "coverage"]
 }
