--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"@whatwg-node/server": "^0.10.17",
 		"itty-router": "^5.0.22",
 		"p-defer": "^4.0.1",
+		"p-mutex": "^0.1.0",
 		"secret-stream-http": "^1.0.1",
 		"styled-map-package": "^4.0.1",
 		"typebox": "^1.0.61",
