--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	},
 	"scripts": {
 		"test": "run-p test:*",
-		"test:js": "vitest run",
+		"test:js": "vitest run --coverage",
 		"test:lint": "eslint",
 		"test:types": "tsc --noEmit",
 		"format": "prettier --write .",
