Revert "add coverage to CI tests"
This reverts commit 0002894505c396e488da6437ca5c65c964637ee5.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	},
 	"scripts": {
 		"test": "run-p test:*",
-		"test:js": "vitest run --coverage",
+		"test:js": "vitest run",
 		"test:lint": "eslint",
 		"test:types": "tsc --noEmit",
 		"format": "prettier --write .",
