--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
 		".": {
 			"types": "./dist/index.d.ts",
 			"default": "./dist/index.js"
+		},
+		"./errors.js": {
+			"types": "./dist/lib/errors.d.ts",
+			"default": "./dist/lib/errors.js"
 		}
 	},
 	"scripts": {
